--- a/recipes/Mom's Sushi Rice.html
+++ b/recipes/Mom's Sushi Rice.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8" />
     <title>title</title>
+    <a href="/home/jsaint73/repos/odin-recipes/index.html">Home</a>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/Mom's Sushi Rice.html">Mom's Sushi Rice</a>
+    <h1>Mom's Sushi Rice</h1>
     
 </body>
 </html>
