--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/Mom's Sushi Rice.html">Mom's Sushi Rice</a>
-    
+    <a href="recipes/Chicken Alfredo Pasta.html">Chicken Alfredo Pasta</a>
+    <a href="recipes/Chicken Alfredo Pasta.html">Beefy Queso Loaded Potatoes</a>
 </body>
 </html>
