--- a/recipes/Mom's Sushi Rice.html
+++ b/recipes/Mom's Sushi Rice.html
@@ -7,6 +7,35 @@
 </head>
 <body>
     <h1>Mom's Sushi Rice</h1>
-    
+    <img src="Mom's Rice.png" alt = Recipe1>
+    <p>Description: A take on the submitter's Mother's sushi Rice</p>
+    <figure>
+        <figcaption>Ingredients</figcaption>
+        <ul>
+            <li>2 ¼ cups Japanese sushi-style rice</li>
+            <li>1 (4 inch) piece konbu dried kelp (Optional)</li>
+            <li>3 cups water</li>
+            <li> ¼ cup rice vinegar</li>
+            <li>¼ cup white sugar</li>
+            <li>1 ¼ teaspoons salt</li>
+        </ul>
+    </figure>
+    <figure>
+        <figcaption>Steps</figcaption>
+        <ol>
+            <li>
+                Place rice into a large, deep bowl. Fill with cold water and rub rice together with hands until water turns milky white. Pour off cloudy water, being careful not to pour out rice. Repeat 3 or 4 times until you can see rice through 3 inches of water.  
+            </li>
+            <li>
+                Drain rice in a fine strainer, then place into a saucepan along with konbu and 3 cups water. Allow to stand for 30 minutes. Stir together rice vinegar, sugar, and salt until dissolved in a small bowl; set aside.
+            </li>
+            <li>
+                Cover, and bring rice to a boil over high heat, then reduce heat to low, and simmer for 15 minutes. Remove from heat and allow to stand, covered, for 5 minutes. 
+            </li>
+            <li>
+                Scrape rice into a bowl; remove and discard konbu. Stir in vinegar mixture until well incorporated and no lumps of rice remain. Allow to cool at room temperature. For a shinier appearance, use an electric fan to cool rice rapidly. 
+            </li>
+        </ol>
+    </figure>
 </body>
 </html>
