Finished Second Page still need to fix the image

--- a/recipes/Chicken Alfredo Pasta.html
+++ b/recipes/Chicken Alfredo Pasta.html
@@ -6,7 +6,42 @@
     <a href="/home/jsaint73/repos/odin-recipes/index.html">Home</a>
 </head>
 <body>
-    <h1>Mom's Sushi Rice</h1>
-    
+    <h1>Chicken Alfredo Pasta</h1>
+    <img src="Chicken-Alfredo-2-1024x536.png" alt=" Alfredo Pasta">
+    <p>Discover the ultimate Chicken Alfredo recipe! This quick and easy dish features tender chicken, rich  parmesan cream sauce, and  pasta perfection. Perfect for weeknight dinners and cooked in less than 30 minutes. </p>    
+    <figure>
+        <figcaption>Ingredients</figcaption>
+        <strong>Chicken & Pasta</strong>
+        <ul>
+            <li>350g (12.3oz) - Fettuccine</li>
+            <li>1 Tbsp (20ml) - Olive Oil</li>
+            <li>1 - Chicken Breast, Halved</li>
+            <li>1 tsp (4g) - Onion Powder</li>
+            <li>1 tsp (4g) - Garlic Powder</li>
+            <li>1 tsp (4g) - Smoked Paprika</li>
+            <li>Salt & Pepper</li>
+
+            <strong>Creamy Alfredo Sauce </strong>
+            <li>1 Tbsp (14g) - Unsalted Butter</li>
+            <li>4 - Garlic Cloves, Grated</li>
+            <li>1 ½ Cups (375ml) - Thickened Cream</li>
+            <li>¼ tsp (0.1g) - Nutmeg, Grated</li>
+            <li>Parmigiano Reggiano, Freshly Grated</li>
+            <li>Flat Leaf Parsley, Chopped </li>
+            <li>Salt & Pepper</li>
+        </ul>
+    </figure>
+    <figure>
+        <figcaption>Instructions</figcaption>
+        <ol>
+            <li>Bring a pot of water to a boil and season generously with salt. Cook the fettuccine for 1 minute less than the packet instructions. Drain and reserve ½ - 1 cup of pasta water.</li>
+        </ol>
+        <ol>Slice the chicken into two fillets and place them in a bowl. Add the onion and garlic powder, smoked paprika, salt, and pepper. Mix well.</ol>
+        <ol>Place a pan over medium-high heat and add olive oil. Sear the chicken for 2 ½ - 3 minutes on each side or until cooked in the centre. Remove, rest for 5 minutes, and thinly slice</ol>
+        <ol>Place the same pan or a clean pan over medium heat. Add the butter and garlic, and sauté for 2 minutes or until the butter starts to foam and the garlic is fragrant but not brown.</ol>
+        <ol>Increase the heat to medium-high, add cream and mix well. Season to taste and bring to a boil. Reduce heat to low and simmer for 5-6 minutes or until thick and slightly reduced. Add Parmigiano Reggiano and nutmeg and gently mix to combine.</ol>
+        <ol>Add the drained pasta, mix to coat and cook for 1 minute. Adjust with the reserved pasta water if required. Remove from heat.</ol>
+        <ol>Serve the creamy Alfredo pasta in a bowl, laying the sliced chicken on top. Garnish with flat-leaf parsley and Parmigiano Reggiano. Dig in.</ol>
+    </figure>
 </body>
 </html>
