Filled out instructions for third page added to read me

--- a/recipes/Beefy Queso Loaded Potatoes.html
+++ b/recipes/Beefy Queso Loaded Potatoes.html
@@ -7,6 +7,44 @@
 </head>
 <body>
     <h1>Mom's Sushi Rice</h1>
-    
+    <img src="/workspaces/odin-recipes/images/Beefy-Queso-Loaded-Potatoes-807x1024.jpg"  alt="Picture of Beefy Queso Loaded Potatoes">
+    <p>Beefy Queso Loaded Potatoes made up of 90/10 ground beef, potatoes, calabacitas, and a macro friendly queso made using cottage cheese. At 48 grams of protein, this meal is a great way to get more protein in your day.</p>
+    <figure>
+        <figcaption>Ingredients</figcaption>
+        <strong>For the Meat</strong>
+        <ul>
+            <li>2 lbs (908 g) ground beef (90/10)</li>
+            <li>1 cup (227 g) tomato sauce</li>
+            <li>1 tsp (3 g) paprika</li>
+            <li>1 tsp (3 g) garlic powder</li>
+            <li>1 tsp (3 g) cumin)</li>
+            <li>1 tsp (6 g) salt</li>
+            <li>1 tbsp (15 g) oil</li>
+        </ul>
+        <strong>For the Calabacitas</strong>
+        <ul>
+            <li>1 small (125 g) zucchini</li>
+            <li>1 small (150 g) onion</li>
+            <li>2 medium (150 g) poblano pepper</li>
+            <li>4 oz (113 g) mushrooms</li>
+            <li>1 tbsp (15 g) oil</li>
+        </ul>
+        <strong>For the Potatoes</strong>
+        <ul>
+            <li>2.2 lbs (1000 g) Yukon gold potatoes</li>
+            <li>1 tbsp (15 g) olive oil</li>
+            <li>salt and pepper to taste</li>
+        </ul>
+        <strong>For the Queso</strong>
+        <ul>
+            <li>½ cup (113 g) cottage cheese</li>
+            <li>¼ cup (28 g) cheddar cheese</li>
+            <li>¼ cup (28 g) pepper jack cheese</li>
+            <li>3 tbsp (45 g) 2% milk</li>
+            <li>1 tsp (3 g) garlic powder</li>
+            <li>2 tsp (10 g) chipotle peppers in adobo sauce</li>
+            <li>½ tsp (3 g) salt</li>
+        </ul>
+    </figure>
 </body>
 </html>
