--- a/recipes/Beefy Queso Loaded Potatoes.html
+++ b/recipes/Beefy Queso Loaded Potatoes.html
@@ -6,7 +6,7 @@
     <a href="/home/jsaint73/repos/odin-recipes/index.html">Home</a>
 </head>
 <body>
-    <h1>Mom's Sushi Rice</h1>
+    <h1>Beefy Queso Loaded Potatoes</h1>
     <img src="/workspaces/odin-recipes/images/Beefy-Queso-Loaded-Potatoes-807x1024.jpg"  alt="Picture of Beefy Queso Loaded Potatoes">
     <p>Beefy Queso Loaded Potatoes made up of 90/10 ground beef, potatoes, calabacitas, and a macro friendly queso made using cottage cheese. At 48 grams of protein, this meal is a great way to get more protein in your day.</p>
     <figure>
@@ -45,6 +45,52 @@
             <li>2 tsp (10 g) chipotle peppers in adobo sauce</li>
             <li>½ tsp (3 g) salt</li>
         </ul>
+    </figure>
+    <figure>
+        <h1>Instructions</h1>
+        <figcaption>For The Potatoes</figcaption>
+        <ol>
+            <li>Wash and cut 2.2 lbs or 1 kg worth of potatoes into a medium to large dice. No need to peel them, just wash the dirt off well.</li>
+            <li>Add the diced potatoes to a large bowl and season with salt and pepper to your liking, drizzle in 1 tbsp of oil and toss to coat.</li>
+            <li>Spray a large sheet pan with oil and spread the potatoes out over the surface. Roast the potatoes at 400 °F (204 °C) for 25 minutes, tossing halfway through. Cook them until you have achieved your desired level of browning.</li>
+        </ol>
+    </figure>
+    <figure>
+        <figcaption>For The Vegetables</figcaption>
+        <ol>
+            <li>Wash and cut your vegetables. Cut the onions, peppers, and mushrooms into a large dice and the zucchini into a medium dice.</li>
+            <li>Heat a large skillet over high heat and add in about 2 tsp of oil. Add the peppers and onions first and allow them to cook for 3-5 minutes first to develop color. Season them lightly with salt.</li>
+            <li>Create some space in the center of your pan and add an additional 1 tsp of oil and dump in your mushrooms and zucchini. Season lightly with salt and give these a chance to brown.</li>
+            <li>Be sure not to overcook these as it will negatively impact their texture.</li>
+        </ol>
+    </figure>
+    <figure>
+        <figcaption>For The Taco Meat</figcaption>
+        <ol>
+            <li>Heat a large skillet over medium high heat and brown the ground beef in 1 tbsp of oil.</li>
+            <li>Season the beef in the skillet with 1 tsp of salt, garlic powder, cumin, and paprika.</li>
+            <li>Once the beef is 90% of the way cooked, add in ½ cup of tomato sauce. Stir to combine and cook for an additional 3-5 minutes to reduce and thicken.</li>
+        </ol>
+    </figure>
+    <figure>
+        <figcaption>For The Queso</figcaption>
+        <ol>
+            <li>Add the cottage cheese, pepper jack, cheddar, chipotles in adobo sauce, salt, and garlic powder to a microwave safe bowl. Microwave for about a minute to melt the cheeses.</li>
+            <li>Add to a blender with 3 tbsp of milk and blend until smooth.</li>
+            <li>Divide the queso out into smaller ramekins to store in each container.</li>
+        </ol>
+    </figure>
+    <figure>
+        <figcaption>Plating</figcaption>
+        <ol>
+            <li>This recipe makes 5 servings. Divide all of your ingredients evenly between them. This meal will last up to 5 days in the fridge.</li>
+        </ol>
+    </figure>
+    <figure>
+        <figcaption>Reheating</figcaption>
+        <ol>
+            <li>If you want your potatoes to be crispy, you will need to reheat them in the air fryer. I do 6 minutes at 400 °F (204 °C).</li>
+        </ol>
     </figure>
 </body>
 </html>
